--- a/plasticcdata.ipynb
+++ b/plasticcdata.ipynb
@@ -53,7 +53,7 @@
       "cell_type": "code",
       "source": [
         "#mapping target numbers to actual class names for celestial object classification\n",
-        "largeclass_map = {\n",
+        "class_map = {\n",
         "    90: \"Type Ia Supernova\",\n",
         "    67: \"Type Ia Supernova - Old \",\n",
         "    52: \"Type Ia Supernova - New\",\n",
